# cadence-change-management-system

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users.py  0002_change_requests.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  changes.py  health.py  users.py
backend/app/core/: change_enums.py  change_risk.py  config.py  roles.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  change_request.py  change_status_history.py  user.py
backend/app/schemas/: auth.py  change_request.py  user.py
backend/app/services/: auth_service.py  change_request_service.py  change_state_machine.py  user_service.py
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_changes.py  test_health.py  test_users.py
backend/tests/unit/: test_change_risk.py  test_change_state_machine.py  test_security.py  test_user_service.py
docs/: DESIGN_DECISIONS.md  LOCAL_DEV_SETUP.md
frontend/: .env.example  README.md  next.config.js  package.json  tailwind.config.ts
infra/: README.md
infra/postgres/: init.sql
